frontend-deploy.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: frontend
  namespace: front-blockchain
  labels:
    app: frontend 
spec:
#Quantidade de replicas e regras de provisionamento do Deployment
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate  
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: nginx:1.15-alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        securityContext: {}
        serviceAccount: srvapps
        serviceAccountName: srvapps
